# Knowledges

./: .gitignore  .gitmodules  LICENSE  Unity Summative.md  _widgets  a*_widgets.html  astar_widgets.html
.obsidian/: community-plugins.json
C++ Advanced/: cpp_a_star_.md  cpp_behaviour_tree old.md  cpp_behaviour_tree_lecture.html  cpp_behaviour_tree_lecture.md  cpp_builder  (+5 more)
C++ Advanced/cpp_ranges_examples/: .gitignore  CMakeLists.txt  README.md
C++ Advanced/cpp_ranges_examples/examples/01_the_iterator_problem/: CMakeLists.txt  main.cpp
C++ Advanced/cpp_ranges_examples/examples/02_range_concept_basics/: CMakeLists.txt  main.cpp
C++ Advanced/cpp_ranges_examples/examples/03_range_algorithms_basics/: CMakeLists.txt  main.cpp
C++ Advanced/cpp_ranges_examples/examples/04_composing_pipelines/: CMakeLists.txt  main.cpp
C++ Advanced/cpp_ranges_examples/examples/05_projections_and_constraints/: CMakeLists.txt  main.cpp
C++ Advanced/cpp_ranges_examples/examples/06_views_lazy_evaluation/: CMakeLists.txt  main.cpp
C++ Advanced/cpp_ranges_examples/examples/07_owning_views/: CMakeLists.txt  main.cpp
C++ Advanced/cpp_ranges_examples/examples/08_borrowing_views/: CMakeLists.txt  main.cpp
C++ Advanced/cpp_ranges_examples/examples/09_ranges_to/: CMakeLists.txt  main.cpp
C++ Advanced/cpp_ranges_examples/examples/10_cpp23_enumerate_zip_chunk/: CMakeLists.txt  main.cpp
C++ Advanced/cpp_ranges_examples/exercises/01_refactor_classic_loop/: CMakeLists.txt  main.cpp
C++ Advanced/cpp_ranges_examples/exercises/02_top3_followers/: CMakeLists.txt  main.cpp
Notes/: C++.md
(+29 files in other folders)
